Fixed vertical alignment dots

--- a/PWA/src/app/rides/rides-list/ride-card/ride-card.component.scss
+++ b/PWA/src/app/rides/rides-list/ride-card/ride-card.component.scss
@@ -40,7 +40,7 @@ article {
     .dots {
         display: flex;
         flex-direction: column;
-        margin-right: 8px;
+        margin: 0 8px 0 0;
 
         .dot {
             margin: 5px 10px;
